--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,9 @@ channels:
 dependencies:
   - python
   - numpy
+  - seaborn
+  - scipy
+  - pandas
   - pip
   - pip:
-    - nbgitpuller
-    - sphinx-gallery
-    - pandas
-    - matplotlib
+    - scdata
