--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,11 @@ name: example-environment
 channels:
   - conda-forge
 dependencies:
-  - python
+  - python==3.7
+  - pip==19.*
   - numpy
   - seaborn
   - scipy
   - pandas
-  - pip
   - pip:
     - scdata
