--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ name: example-environment
 channels:
   - conda-forge
 dependencies:
-  - python==3.7
-  - pip==19.*
+  - python==3.9
+  - pip
   - numpy
   - seaborn
   - scipy
